SF Primes/src/objects/Opportunity_Influencers__c.object
<CustomObject>
    <description>This object tracks the influence a particular contact has on an opportunity.</description>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Main_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Contact Main Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Phone__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Influencers</relationshipLabel>
        <relationshipName>Influencers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>E_Proof_Used_to_Amplify_Hurt__c</fullName>
        <label>E-Proof Used to Amplify Hurt?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Influencer_Hurts__c</fullName>
        <label>Influencer Hurts?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Role__c</fullName>
        <label>Opportunity Role</label>
        <picklist>
            <picklistValues>
                <fullName>Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stakeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Influencers</relationshipLabel>
        <relationshipName>Influencers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution_Notes__c</fullName>
        <label>Proposed Solution Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>R_proof_for_specs_tailor_confirm__c</fullName>
        <label>R-proof for specs, tailor &amp; confirm?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1. Discover the Hurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Qualify the Hurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Amplify the Hurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Propose a Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Buy In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Solution Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Tailor the Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Confirm Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Formal Contracting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Influencer</label>
    <nameField>
        <displayFormat>OI-{000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influencers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>